<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pastel6"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/menghitung_luas_dan_keliling_lingkaran"
        android:textColor="@color/navy"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/jari"
        android:textColor="@color/navy"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_jari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/masukan_jari_jari"
        android:inputType="numberDecimal"
        android:lines="1" />

    <Button
        android:id="@+id/btn_hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/luas_lingkaran"
        android:textSize="20sp"
        android:textColor="@color/navy" />

    <TextView
        android:id="@+id/tv_luas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/luas"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keliling_lingkaran"
        android:textSize="20sp"
        android:textColor="@color/navy" />

    <TextView
        android:id="@+id/tv_keliling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/keliling"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="italic"/>

</LinearLayout>